--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,32 @@ button{
     font-size: large;
     color: #545860;
 }
+
+ul{
+    list-style: none;
+}
+
+.check{
+    width: 10px;
+    height: 10px;
+    line-height: 10px;
+    color: #00c451;
+    border: 3px solid #00c451;
+    border-radius: 50%;
+}
+
+.x{
+    width: 10px;
+    height: 10px;
+    line-height: 10px;
+    color: #ff4c06;
+    border: 3px solid #ff4c06;
+    border-radius: 50%;
+}
+
+
+
+
 span{
     color: white;
     font-size: x-small;
